# frappe-list-unassign-from

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
frappe_list_unassign_from/: __init__.py  hooks.py  modules.txt  version.py
frappe_list_unassign_from/api/: __init__.py  unassign_from.py
frappe_list_unassign_from/config/: desktop.py  docs.py
frappe_list_unassign_from/frappe_list_unassign_from/: __init__.py
frappe_list_unassign_from/public/: build.json
frappe_list_unassign_from/public/js/: unassign_from.bundle.js  unassign_from_v13.bundle.js  unassign_froms_v13.bundle.js
frappe_list_unassign_from/public/js/libs/: custom_bulk_operations.js  unassign_from_dialog.js
