[project]
name = "frappe_list_unassign_from"
version = "1.0.1"
authors = [
    {name = "Ameen Ahmed (Level Up)", email = "kid1194@gmail.com"}
]
description = "A Frappe plugin that adds the support of unassign from for multiple selection in list."
requires-python = ">=3.6"
readme = "README.md"
dependencies = [
    "frappe >=13.0.0"
]

[project.urls]
Documentation = "https://github.com/kid1194/frappe-list-unassign-from"
Source = "https://github.com/kid1194/frappe-list-unassign-from"
