[project]
name = "frappe_list_unassign_from"
authors = [
    {name = "Ameen Ahmed (Level Up)", email = "kid1194@gmail.com"}
]
description = "A Frappe plugin that adds the support of unassign from users for single and multiple list selection."
requires-python = ">=3.6"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=13.0.0"
]

[project.urls]
Documentation = "https://github.com/kid1194/frappe-list-unassign-from"
Source = "https://github.com/kid1194/frappe-list-unassign-from"
